remove shrink-string lib

--- a/src/ui/platforms/desktop/package.json
+++ b/src/ui/platforms/desktop/package.json
@@ -63,10 +63,10 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
-    "react": "^17.0.2",
+    "react": "^16.8.6",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^16.8.6",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.1.2",
     "resolve": "1.18.1",
@@ -88,18 +88,18 @@
     "patch": "ts-node -P ../../../../tsconfig.json ../../../pre_release.ts",
     "sync:mac": "rm -rf ./src/core ./build && cp -R ../../../core ./src",
     "sync:win": "rimraf ./src/core ./build && xcopy ..\\..\\..\\core .\\src\\core /s /i",
-    "start:mac": "yarn sync:mac && node scripts/start.js",
-    "build:mac": "yarn sync:mac && GENERATE_SOURCEMAP=false REACT_APP_DEV_MODE=web node scripts/build.js",
-    "build:win": "yarn sync:win && cross-env GENERATE_SOURCEMAP=false REACT_APP_DEV_MODE=web node scripts/build.js",
-    "start:win": "yarn sync:win && cross-env GENERATE_SOURCEMAP=true node scripts/start.js",
-    "build:dev:win": "yarn sync:win && cross-env GENERATE_SOURCEMAP=false node scripts/build.js",
-    "start:dev:win": "yarn build:dev:win && xcopy .\\public\\home .\\build\\public\\home /s /i && ts-node ./server/app.ts",
-    "build-electron:mac": "yarn sync:mac && GENERATE_SOURCEMAP=false REACT_APP_DEV_MODE=desktop node scripts/build.js",
-    "build-electron:win": "yarn sync:win && cross-env GENERATE_SOURCEMAP=false REACT_APP_DEV_MODE=desktop node scripts/build.js",
-    "electron:win": "yarn build-electron:win && tsc --project ./tools/tsconfig.json && copy .\\tools\\preload.js .\\build && cross-env NODE_ENV=production electron .",
-    "electron:mac": "yarn build-electron:mac && tsc --project ./tools/tsconfig.json && copy .\\tools\\preload.js .\\build && NODE_ENV=production electron .",
-    "build:electron:win": "yarn build-electron:win && tsc --project ./tools/tsconfig.json && copy .\\tools\\preload.js .\\build && electron-builder",
-    "build:electron:mac": "yarn build-electron:mac && tsc --project ./tools/tsconfig.json && cp -R ./tools/preload.js ./build && electron-builder",
+    "start:mac": "npm run sync:mac && node scripts/start.js",
+    "build:mac": "npm run sync:mac && GENERATE_SOURCEMAP=false REACT_APP_DEV_MODE=web node scripts/build.js",
+    "build:win": "npm run sync:win && cross-env GENERATE_SOURCEMAP=false REACT_APP_DEV_MODE=web node scripts/build.js",
+    "start:win": "npm run sync:win && cross-env GENERATE_SOURCEMAP=true node scripts/start.js",
+    "build:dev:win": "npm run sync:win && cross-env GENERATE_SOURCEMAP=false node scripts/build.js",
+    "start:dev:win": "npm run build:dev:win && xcopy .\\public\\home .\\build\\public\\home /s /i && ts-node ./server/app.ts",
+    "build-electron:mac": "npm run sync:mac && GENERATE_SOURCEMAP=false REACT_APP_DEV_MODE=desktop node scripts/build.js",
+    "build-electron:win": "npm run sync:win && cross-env GENERATE_SOURCEMAP=false REACT_APP_DEV_MODE=desktop node scripts/build.js",
+    "electron:win": "npm run build-electron:win && tsc --project ./tools/tsconfig.json && copy .\\tools\\preload.js .\\build && cross-env NODE_ENV=production electron .",
+    "electron:mac": "npm run build-electron:mac && tsc --project ./tools/tsconfig.json && copy .\\tools\\preload.js .\\build && NODE_ENV=production electron .",
+    "build:electron:win": "npm run build-electron:win && tsc --project ./tools/tsconfig.json && copy .\\tools\\preload.js .\\build && electron-builder",
+    "build:electron:mac": "npm run build-electron:mac && tsc --project ./tools/tsconfig.json && cp -R ./tools/preload.js ./build && electron-builder",
     "electron": "tsc --project ./tools/tsconfig.json && copy .\\tools\\preload.js .\\build && electron-builder",
     "test": "node scripts/test.js"
   },
@@ -147,7 +147,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-test-renderer": "^16.9.2",
     "@types/socket.io-client": "^1.4.32",
