--- a/src/server/package.json
+++ b/src/server/package.json
@@ -5,21 +5,19 @@
   "author": "Shaun",
   "license": "GPL-3.0-only",
   "dependencies": {
-    "chalk": "^3.0.0",
-    "express": "^4.17.1",
-    "shrink-string": "3.0.8",
+    "chalk": "^4.1.2",
+    "express": "^4.17.2",
     "socket.io": "2.4.1"
   },
   "devDependencies": {
-    "@types/chalk": "^2.2.0",
-    "@types/express": "^4.17.2",
+    "@types/express": "^4.17.13",
     "@types/socket.io": "^3.0.2",
-    "cross-env": "^7.0.0",
-    "nodemon": "^2.0.2",
-    "ts-node": "^8.6.2",
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
     "tsconfig": "^7.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.3.5"
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "patch": "ts-node ../pre_release.ts",
@@ -29,9 +27,9 @@
     "dev:win": "cross-env NODE_PATH=../ ts-node -P ./tsconfig.server.json ./main.ts",
     "dev:win:watch": "cross-env NODE_PATH=../ nodemon",
     "build:win": "cross-env NODE_PATH=../ tsc -p ./tsconfig.server.json",
-    "start": "yarn build && NODE_PATH=./build REACT_APP_DEV_MODE=prod node ./build/server/main.js",
-    "start:win": "yarn build:win && cross-env NODE_PATH=./build REACT_APP_DEV_MODE=prod node ./build/server/main.js",
-    "start:dev": "yarn build && NODE_PATH=./build REACT_APP_DEV_MODE=dev node ./build/server/main.js",
-    "start:dev:win": "yarn build:win && cross-env NODE_PATH=./build REACT_APP_DEV_MODE=dev node ./build/server/main.js"
+    "start": "npm run build && NODE_PATH=./build REACT_APP_DEV_MODE=prod node ./build/server/main.js",
+    "start:win": "npm run build:win && cross-env NODE_PATH=./build REACT_APP_DEV_MODE=prod node ./build/server/main.js",
+    "start:dev": "npm run build && NODE_PATH=./build REACT_APP_DEV_MODE=dev node ./build/server/main.js",
+    "start:dev:win": "npm run build:win && cross-env NODE_PATH=./build REACT_APP_DEV_MODE=dev node ./build/server/main.js"
   }
 }
